# Bear-Engine

./: .Makefile.swp  CMakeLists.txt  Makefile  Readme.md  make.bat  make_osx.mk  make_windows  make_windows.mk  run
Source/: Game.cpp  Game.h  main.cpp
Source/Entities/: Player.cpp  Player.h
Source/Props/: Room.cpp  Room.h
Source/engine/: BEngineCore.h
Source/engine/ActionControl/: ActionLocket.cpp  ActionLocket.h  MoveBy.h
Source/engine/Base/: Base.cpp  Base.h  EventHandler.cpp  EventHandler.h  Macros.h  Structures.h  Timer.cpp  Timer.h  Wizard.cpp  Wizard.h
Source/engine/ObjVariables/: Node.h  ObjBase.h  Sprite.cpp  Sprite.h  ViewPoint.h
bearengine/: bearengine.h
bearengine/core/: EventHandlers.cpp  EventHandlers.h  Macros.h  Organizer.cpp  Organizer.h  Structures.h  Util.cpp  Util.h
bearengine/modules/: Button.cpp  Button.h  Label.cpp  Label.h  Layer.cpp  Layer.h  Node.cpp  Node.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
ext_libraries/osx/sdl2/2.0.4/: INSTALL_RECEIPT.json
ext_libraries/osx/sdl2_image/2.0.1/: INSTALL_RECEIPT.json
ext_libraries/osx/sdl2_image/2.0.1/lib/: libSDL2_image-2.0.0.dylib
ext_libraries/osx/sdl2_ttf/2.0.13/: INSTALL_RECEIPT.json
ext_libraries/osx/sdl2_ttf/2.0.13/lib/: libSDL2_ttf-2.0.0.dylib
ext_libraries/osx/sdl2_ttf/2.0.13/lib/pkgconfig/: SDL2_ttf.pc
lib/SDL2-2.0.5/test/nacl/: common.js
project-osx/BearEngine-osx/BearEngine/: main.cpp
project-osx/BearEngine-osx/BearEngine-osx.xcodeproj/: project.pbxproj
project-osx/BearEngine-osx/BearEngine-osx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
project-osx/BearEngine-osx/BearEngine-osx.xcodeproj/project.xcworkspace/xcuserdata/Bearis.xcuserdatad/: UserInterfaceState.xcuserstate
project-osx/BearEngine-osx/BearEngine-osx.xcodeproj/xcuserdata/Bearis.xcuserdatad/xcschemes/: BearEngine-osx.xcscheme  BearEngine.xcscheme  xcschememanagement.plist
src/: main.cpp
src/Game/: GameScene.cpp  GameScene.h
